# Namer-C

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
res/: namer.manifest  namer.rc  resource.h
src/: json.hpp  llm.hpp  main.cpp  prefs.hpp  util.hpp
